правки перед показом

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </a>
                         </nav>
                         <button class="button button_primary header__button js-closeBurger">
-                            Скачать демо
+                            Рассчитать проект
                         </button>
                     </div>
                 </div>
@@ -72,10 +72,10 @@
                             (function(w,d,u){var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document,'https://cp.dssl.ru/upload/crm/form/loader_129_2wgmkn.js');
                         </script>
                         <button class="button button_secondary">
-                            Связаться с нами
+                            Заказать консультацию
                         </button>
                         <button class="button button_primary">
-                            Скачать демо
+                            Рассчитать проект
                         </button>
                     </div>
                     <div class="hero__img">
@@ -113,7 +113,7 @@
                                 </p>
                             </div>
                             <button class="button button_secondary">
-                                Связаться с нами
+                                Заказать консультацию
                             </button>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                                 События с кассы, попадая в ActivePOS,  проходят проверку по заданным вами  параметрам. 
                             </p>
                             <button class="button button_secondary suitable__button_desk">
-                                Связаться с нами
+                                Заказать консультацию
                             </button>
                         </div>
                     </div>
@@ -444,7 +444,7 @@
                         </div>
                     </div>
                     <button class="button button_secondary suitable__button_mob">
-                        Связаться с нами
+                        Заказать консультацию
                     </button>
                 </div>
             </section>
@@ -452,7 +452,7 @@
                 <div class="container">
                     <div class="section__head">
                         <h2 class="title-section">
-                            Как работает модуль  ActivePOS
+                            Как работает модуль ActivePOS
                         </h2>
                         <div class="section__head-block">
                             <p class="text-standard">
@@ -504,36 +504,6 @@
                             </div>
                             <p class="text-small work__text">
                                 Клиент может выводить инциденты оператору, просматривать моменты в записи и формировать отчёты
-                            </p>
-                        </div>
-                        <div class="work__item">
-                            <div class="work__outer">
-                                <div class="work__inner">
-                                    <div class="work__img">
-                                        <img src="./images/work_1.png" alt="">
-                                    </div>
-                                </div>
-                                <h3 class="title-xs work__title">
-                                    Синхронизация данных
-                                </h3>
-                            </div>
-                            <p class="text-small work__text">
-                                События с кассы и весового контроля синхронизированы с видеопотоком
-                            </p>
-                        </div>
-                        <div class="work__item">
-                            <div class="work__outer">
-                                <div class="work__inner">
-                                    <div class="work__img">
-                                        <img src="./images/work_2.png" alt="">
-                                    </div>
-                                </div>
-                                <h3 class="title-xs work__title">
-                                    Поиск и отбор событий по параметрам
-                                </h3>
-                            </div>
-                            <p class="text-small work__text">
-                                В модуле есть возможность искать и отбирать определённые события
                             </p>
                         </div>
                     </div>
@@ -745,7 +715,7 @@
                                 Адрес
                             </h3>
                             <div class="footer__info">
-                                Москва, ул. Мясницкая 20а
+                                Москва, ул. Бакунинская, д. 71
                             </div>
                         </div>
                     </div>
