--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
                         </p>
                     </div>
                     <div class="hero__buttons">
-                        <script data-b24-form="click/129/2wgmkn" data-skip-moving="true">
-                            (function(w,d,u){var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document,'https://cp.dssl.ru/upload/crm/form/loader_129_2wgmkn.js');
-                        </script>
+                        <script data-b24-form="click/118/5nu3qg" data-skip-moving="true">(function(w,d,u){var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document,'https://cp.dssl.ru/upload/crm/form/loader_118_5nu3qg.js');</script>
                         <button class="button button_secondary">
                             Заказать консультацию
                         </button>
@@ -685,9 +683,7 @@
                         </p>
                     </div>
                     <div class="feedback__form">
-                        <script data-b24-form="inline/129/2wgmkn" data-skip-moving="true">
-                            (function(w,d,u){var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document,'https://cp.dssl.ru/upload/crm/form/loader_129_2wgmkn.js');
-                        </script>
+                        <script data-b24-form="inline/118/5nu3qg" data-skip-moving="true">(function(w,d,u){var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document,'https://cp.dssl.ru/upload/crm/form/loader_118_5nu3qg.js');</script>
                     </div>
                 </div>
             </section>
