--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="problems__wrapper js-tabs">
-                        <div class="problems__buttons">
+                    <div class="problems__wrapper js-tabs js-problemsButtonsParent">
+                        <div class="problems__buttons js-problemsButtons">
                             <button class="problems__button js-tabsItem is-active">
                                 Аннулирование чека
                             </button>
