--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                                 Контакты
                             </a>
                         </nav>
+                        <a href="tel:+74957837287" class="header__phone link">
+                            +7 (495) 783-72-87
+                        </a>
                         <button class="button button_primary header__button js-closeBurger">
                             Рассчитать проект
                         </button>
