--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             </div>
         </header>
         <main class="app__main">
+            <style>
+                .hero {
+                    --hero-background: url('./images/hero.png');
+                    --hero-background-mob: url('./images/hero_mob.png');
+                }
+            </style>
             <section class="hero" id="hero">
                 <div class="container">
                     <div class="hero__tags">
