--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </button>
                     </div>
                     <div class="hero__img">
-                        <img src="./images/hero-img.png" alt="">
+                        <img src="./images/hero-img.svg" alt="">
                     </div>
                 </div>
             </section>
