--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="header__wrapper js-headerWrapper">
                     <div class="header__inner">
                         <a href="#hero" class="header__logo">
-                            <img src="./images/logo.svg" alt="">
+                            <img src="./images/logo.png" alt="">
                         </a>
                         <div class="header__burger js-headerBurger"></div>
                     </div>
@@ -86,7 +86,7 @@
                         </button>
                     </div>
                     <div class="hero__img">
-                        <img src="./images/hero-img.svg" alt="">
+                        <img src="./images/hero-img.png" alt="">
                     </div>
                 </div>
             </section>
@@ -701,7 +701,7 @@
             <div class="container">
                 <div class="footer__wrapper">
                     <a href="#hero" class="footer__logo">
-                        <img src="./images/logo-dark.svg" alt="">
+                        <img src="./images/logo-dark.png" alt="">
                     </a>
                     <div class="footer__inner">
                         <div class="footer__block">
@@ -736,10 +736,10 @@
                     </div>
                     <div class="footer__contacts">
                         <a href="javascript:void(0)" class="footer__contact">
-                            <img src="./images/icons/contacts/tg.svg" alt="">
+                            <img src="./images/icons/contacts/tg.png" alt="">
                         </a>
                         <a href="javascript:void(0)" class="footer__contact">
-                            <img src="./images/icons/contacts/vk.svg" alt="">
+                            <img src="./images/icons/contacts/vk.png" alt="">
                         </a>
                     </div>
                 </div>
